@@ -1,3 +1,10 @@
+2004-10-29  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* tests/wm.test: Add Win32 test cases for attributes
+	subcommand.
+	* win/tkWinWm.c (WmAttributesCmd): Fixup broken
+	option processing logic for attributes subcommand.
+
 2004-10-28  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* win/tkWin32Dll.c (DllMain, _except_dllmain_detach_handler):
